--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+.stage-items:hover {
+  cursor: pointer;
+  border: none;
+  box-shadow: 
+  rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, 
+  rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  transition: box-shadow 0.4s ease-in-out;
+}
